--- a/docker/conf/nginx.conf
+++ b/docker/conf/nginx.conf
@@ -1,29 +1,38 @@
 server {
-    listen               80;
     listen               443 ssl;
-
     ssl_certificate      /etc/nginx/certs/localhost.crt;
     ssl_certificate_key  /etc/nginx/certs/localhost.key;
     keepalive_timeout    70;
-    server_name localhost;
+    server_name          localhost;
+    index                index.php index.html;
+    root                 /usr/share/php-server;
 
+    location ~ \.php$ {
+        try_files      $uri index.php;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass   php-server:9000;
+        fastcgi_index  index.php;
+        include        fastcgi_params;
+        fastcgi_param  REQUEST_METHOD $request_method;
+        fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
+    # location / {
+    #     root   /usr/share/nginx/html;
+    #     index  index.html index.htm;
+    # }
 
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
     #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
+    # error_page   500 502 503 504  /50x.html;
+    # location = /50x.html {
+    #     root   /usr/share/nginx/html;
+    # }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
     #
@@ -33,13 +42,6 @@ server {
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
 
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
