Add base src/php/register.php

--- a/docker/conf/nginx.conf
+++ b/docker/conf/nginx.conf
@@ -1,10 +1,11 @@
 server {
+    listen               80;
     listen               443 ssl;
     ssl_certificate      /etc/nginx/certs/localhost.crt;
     ssl_certificate_key  /etc/nginx/certs/localhost.key;
     keepalive_timeout    70;
     server_name          localhost;
-    index                index.php index.html;
+    index                register.php index.php index.html;
     root                 /usr/share/php-server;
 
     location ~ \.php$ {
